tests/golden/type_errors/array_map_callback_arity.cd
map([1], fun (left, right) { return left; });
