tests/golden/type_errors/array_map_callback_arity.err
Type error at 1:10: expected 1 parameters but got 2
  map([1], fun (left, right) { return left; });
           ^
